Centralizando o avatar no mobile

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,6 +29,7 @@ import Layout from "../layouts/Layout.astro";
                     href="https://www.linkedin.com/in/brennonogueiraalves/"
                     rel="noreferrer"
                     target="_blank"
+                    aria-label="Ícone que direciona para o Linkedin do Brenno"
                   >
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
@@ -47,6 +48,7 @@ import Layout from "../layouts/Layout.astro";
                     href="https://github.com/BrennoAlves"
                     rel="noreferrer"
                     target="_blank"
+                    arial-label="Ícone que direciona para o GitHub do Brenno"
                   >
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
@@ -63,8 +65,8 @@ import Layout from "../layouts/Layout.astro";
               </ul>
             </div>
           </div>
-          <div class="ml-auto">
-            <div class="avatar flex-items-center mx-auto">
+          <div class="mx-auto">
+            <div class="avatar flex-items-center mx-auto sm:flex-row">
               <div class="w-60 rounded">
                 <img src="/perfil.png" alt="Fotinha versão Stardew Valley">
               </div>
