--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,11 @@
 ---
 import Layout from "../layouts/Layout.astro";
+import Projetos from "../layouts/Projetos.astro";
 
 //inferno
 ---
 
+<!-- Sessão bem-vindo -->
 <Layout>
   <main>
     <div class="flex flex-col gap-20">
@@ -68,7 +70,7 @@ import Layout from "../layouts/Layout.astro";
           <div class="mx-auto">
             <div class="avatar flex-items-center mx-auto sm:flex-row">
               <div class="w-60 rounded">
-                <img src="/perfil.png" alt="Fotinha versão Stardew Valley">
+                <img src="/perfil.png" alt="Fotinha versão Stardew Valley" />
               </div>
             </div>
           </div>
@@ -77,3 +79,5 @@ import Layout from "../layouts/Layout.astro";
     </div>
   </main>
 </Layout>
+<!-- Sessão projetos -->
+<!-- e -->
