--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,7 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import Projetos from "../layouts/Projetos.astro";
-
-//inferno
 ---
 
-<!-- Sessão bem-vindo -->
 <Layout>
   <main>
     <div class="flex flex-col gap-20">
@@ -76,8 +72,13 @@ import Projetos from "../layouts/Projetos.astro";
           </div>
         </div>
       </article>
+      
+      <section>
+        <h2 class="text-2xl mb-6">Projetos em Destaque</h2>
+        <div class="text-center">
+          <a href="/projetos" class="btn btn-primary">Ver Todos os Projetos</a>
+        </div>
+      </section>
     </div>
   </main>
 </Layout>
-<!-- Sessão projetos -->
-<!-- e -->
