--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -73,8 +73,12 @@ import Layout from "../layouts/Layout.astro";
         </div>
       </article>
       
-      <section>
-        <h2 class="text-2xl mb-6">Projetos em Destaque</h2>
+      <section class="flex flex-col gap-6">
+        <h2 class="text-2xl">Projetos em Destaque</h2>
+        <p class="opacity-70 leading-6">
+          Confira alguns dos principais projetos desenvolvidos pela Dataclix, 
+          focados em soluções web, mobile e inteligência artificial.
+        </p>
         <div class="text-center">
           <a href="/projetos" class="btn btn-primary">Ver Todos os Projetos</a>
         </div>
