--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -9,7 +9,7 @@ import BaseLayout from "./BaseLayout.astro";
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/icon.png" />
+    <link rel="icon" type="image/png" href="/icon.png" />
     <title>{TITULO_SITE}</title>
     <meta name="description" content={DESCRICAO_SITE} />
     <ViewTransitions />
