--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,6 +2,12 @@
 import { ViewTransitions } from "astro:transitions";
 import { TITULO_SITE, DESCRICAO_SITE } from "../consts";
 import BaseLayout from "./BaseLayout.astro";
+
+export interface Props {
+  title?: string;
+}
+
+const { title = TITULO_SITE } = Astro.props;
 ---
 
 <!doctype html>
@@ -9,8 +15,8 @@ import BaseLayout from "./BaseLayout.astro";
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-    <title>{TITULO_SITE}</title>
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <title>{title}</title>
     <meta name="description" content={DESCRICAO_SITE} />
     <ViewTransitions />
     <style>
